# tauri

./: Cargo.toml  LICENSE.spdx  README.md  package.json
core/tauri/: Cargo.toml
tooling/bundler/src/bundle/macos/templates/dmg/: bundle_dmg
