[workspace]
members = [
  "core/tauri",
  "core/tauri-runtime",
  "core/tauri-runtime-wry",
  "core/tauri-macros",
  "core/tauri-utils",
  "core/tauri-build",
  "core/tauri-codegen",
  "core/tauri-config-schema",
  "core/tests/restart",
]

[workspace.package]
name = "breezeos-tauri"
version = "1.0.0"
authors = ["Dao Thanh Minh <baodaigov@gmail.com>"]
homepage = "https://tauri.app/"
repository = "https://github.com/daothanhminh/tauri"
categories = ["gui", "web-programming"]
license = "Unlicense"
edition = "2021"
rust-version = "1.65"

# default to small, optimized workspace release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
